# server/documentation/openapi.json
@@ -174,6 +174,24 @@
 				}
 			}
 		},
+		"/project": {
+			"get": {
+				"tags": ["Project"],
+				"summary": "Register to the app",
+				"parameters": [
+					{
+						"name": "token",
+						"in": "header",
+						"schema": { "type": "string" }
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "Success"
+					}
+				}
+			}
+		},
 		"/project/add-new-project": {
 			"post": {
 				"tags": ["Project"],
