# server/routers/projectRouter.js
@@ -3,4 +3,7 @@ const projectController = require("../controllers/ProjectController");
 
 router.post("/add-new-project", projectController.addNewProject);
 
+router.get("/", projectController.getAllProjects);
+
+
 module.exports = router
